Swagger updated, token auto
